grammars/mbtp/test/corpus/mbtp.txt
================================================================================
predicate and logic function
================================================================================
pub predicate sorted(xs : Array[Int]) {
  ∀ i : Int, i < xs.length() → true
}

fn sum(x : Int, y : Int) -> Int {
  x + y
}

fn Math::eq(x : Int, y : Int) -> Bool = "logic.eq"
--------------------------------------------------------------------------------

(structure
  (mbtp_declaration
    (predicate_definition
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_applied_type
                (mbtp_type_path
                  (identifier
                    (uppercase_identifier)))
                (mbtp_type
                  (mbtp_non_function_type
                    (mbtp_type_path
                      (identifier
                        (uppercase_identifier))))))))))
      (mbtp_predicate_body
        (mbtp_term
          (mbtp_implies_term
            (mbtp_or_term
              (mbtp_and_term
                (mbtp_not_term
                  (mbtp_quantified_term
                    (lowercase_identifier)
                    (mbtp_type
                      (mbtp_non_function_type
                        (mbtp_type_path
                          (identifier
                            (uppercase_identifier)))))
                    (mbtp_term
                      (mbtp_implies_term
                        (mbtp_or_term
                          (mbtp_and_term
                            (mbtp_not_term
                              (mbtp_term_atom
                                (mbtp_expression
                                  (mbtp_binary_expression
                                    (mbtp_atomic_expression
                                      (mbtp_identifier_expression
                                        (mbtp_value_path
                                          (identifier
                                            (lowercase_identifier)))))
                                    (mbtp_apply_expression
                                      (mbtp_field_expression
                                        (mbtp_atomic_expression
                                          (mbtp_identifier_expression
                                            (mbtp_value_path
                                              (identifier
                                                (lowercase_identifier)))))
                                        (dot_lowercase_identifier)))))))))
                        (mbtp_implies_term
                          (mbtp_or_term
                            (mbtp_and_term
                              (mbtp_not_term
                                (mbtp_term_atom
                                  (mbtp_expression
                                    (mbtp_atomic_expression
                                      (mbtp_literal_expression
                                        (literal
                                          (boolean_literal)))))))))))))))))))))
  (mbtp_declaration
    (logic_function_definition
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier))))))
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier)))))))
      (mbtp_type
        (mbtp_non_function_type
          (mbtp_type_path
            (identifier
              (uppercase_identifier)))))
      (mbtp_logic_block_expression
        (mbtp_expression
          (mbtp_binary_expression
            (mbtp_atomic_expression
              (mbtp_identifier_expression
                (mbtp_value_path
                  (identifier
                    (lowercase_identifier)))))
            (mbtp_atomic_expression
              (mbtp_identifier_expression
                (mbtp_value_path
                  (identifier
                    (lowercase_identifier))))))))))
  (mbtp_declaration
    (logic_function_definition
      (uppercase_identifier)
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier))))))
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier)))))))
      (mbtp_type
        (mbtp_non_function_type
          (mbtp_type_path
            (identifier
              (uppercase_identifier)))))
      (string_literal
        (string_fragment
          (unescaped_string_fragment))))))

================================================================================
lemma blocks
================================================================================
lemma preserves_order(xs : Array[Int]) where { witness: xs.length() } {
  proof_assert ∀ i : Int, i < xs.length() → true;
  if xs.length() == 0 {
    ()
  } else {
    match xs {
      Nil => ()
      Cons(head, tail) => proof_assert head == head
    }
  }
}
--------------------------------------------------------------------------------

(structure
  (mbtp_declaration
    (lemma_definition
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_applied_type
                (mbtp_type_path
                  (identifier
                    (uppercase_identifier)))
                (mbtp_type
                  (mbtp_non_function_type
                    (mbtp_type_path
                      (identifier
                        (uppercase_identifier))))))))))
      (mbtp_where_clause
        (mbtp_where_field
          (lowercase_identifier)
          (mbtp_expression
            (mbtp_apply_expression
              (mbtp_field_expression
                (mbtp_atomic_expression
                  (mbtp_identifier_expression
                    (mbtp_value_path
                      (identifier
                        (lowercase_identifier)))))
                (dot_lowercase_identifier))))))
      (lemma_block_expression
        (lemma_sequence_expression
          (lemma_nonsequence_expression
            (lemma_proof_assert_expression
              (mbtp_term
                (mbtp_implies_term
                  (mbtp_or_term
                    (mbtp_and_term
                      (mbtp_not_term
                        (mbtp_quantified_term
                          (lowercase_identifier)
                          (mbtp_type
                            (mbtp_non_function_type
                              (mbtp_type_path
                                (identifier
                                  (uppercase_identifier)))))
                          (mbtp_term
                            (mbtp_implies_term
                              (mbtp_or_term
                                (mbtp_and_term
                                  (mbtp_not_term
                                    (mbtp_term_atom
                                      (mbtp_expression
                                        (mbtp_binary_expression
                                          (mbtp_atomic_expression
                                            (mbtp_identifier_expression
                                              (mbtp_value_path
                                                (identifier
                                                  (lowercase_identifier)))))
                                          (mbtp_apply_expression
                                            (mbtp_field_expression
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier)))))
                                              (dot_lowercase_identifier)))))))))
                              (mbtp_implies_term
                                (mbtp_or_term
                                  (mbtp_and_term
                                    (mbtp_not_term
                                      (mbtp_term_atom
                                        (mbtp_expression
                                          (mbtp_atomic_expression
                                            (mbtp_literal_expression
                                              (literal
                                                (boolean_literal))))))))))))))))))))
          (lemma_sequence_expression
            (lemma_nonsequence_expression
              (lemma_if_expression
                (mbtp_term
                  (mbtp_implies_term
                    (mbtp_or_term
                      (mbtp_and_term
                        (mbtp_not_term
                          (mbtp_term_atom
                            (mbtp_expression
                              (mbtp_binary_expression
                                (mbtp_apply_expression
                                  (mbtp_field_expression
                                    (mbtp_atomic_expression
                                      (mbtp_identifier_expression
                                        (mbtp_value_path
                                          (identifier
                                            (lowercase_identifier)))))
                                    (dot_lowercase_identifier)))
                                (mbtp_atomic_expression
                                  (mbtp_literal_expression
                                    (literal
                                      (integer_literal))))))))))))
                (lemma_block_expression
                  (lemma_sequence_expression
                    (lemma_nonsequence_expression
                      (lemma_unit_expression))))
                (lemma_block_expression
                  (lemma_sequence_expression
                    (lemma_nonsequence_expression
                      (lemma_match_expression
                        (mbtp_expression
                          (mbtp_atomic_expression
                            (mbtp_identifier_expression
                              (mbtp_value_path
                                (identifier
                                  (lowercase_identifier))))))
                        (lemma_match_case
                          (mbtp_pattern
                            (mbtp_pattern_constructor
                              (uppercase_identifier)))
                          (lemma_nonsequence_expression
                            (lemma_unit_expression)))
                        (lemma_match_case
                          (mbtp_pattern
                            (mbtp_pattern_constructor
                              (uppercase_identifier))
                            (mbtp_pattern
                              (lowercase_identifier))
                            (mbtp_pattern
                              (lowercase_identifier)))
                          (lemma_nonsequence_expression
                            (lemma_proof_assert_expression
                              (mbtp_term
                                (mbtp_implies_term
                                  (mbtp_or_term
                                    (mbtp_and_term
                                      (mbtp_not_term
                                        (mbtp_term_atom
                                          (mbtp_expression
                                            (mbtp_binary_expression
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier)))))
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier))))))))))))))))))))))))))))

================================================================================
moonbit block separator
================================================================================
///|
predicate valid_idx(idx : Int) {
  0 <= idx && idx < 32
}
--------------------------------------------------------------------------------

(structure
  (comment)
  (mbtp_declaration
    (predicate_definition
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier)))))))
      (mbtp_predicate_body
        (mbtp_term
          (mbtp_implies_term
            (mbtp_or_term
              (mbtp_and_term
                (mbtp_and_term
                  (mbtp_not_term
                    (mbtp_term_atom
                      (mbtp_expression
                        (mbtp_binary_expression
                          (mbtp_atomic_expression
                            (mbtp_literal_expression
                              (literal
                                (integer_literal))))
                          (mbtp_atomic_expression
                            (mbtp_identifier_expression
                              (mbtp_value_path
                                (identifier
                                  (lowercase_identifier))))))))))
                (mbtp_not_term
                  (mbtp_term_atom
                    (mbtp_expression
                      (mbtp_binary_expression
                        (mbtp_atomic_expression
                          (mbtp_identifier_expression
                            (mbtp_value_path
                              (identifier
                                (lowercase_identifier)))))
                        (mbtp_atomic_expression
                          (mbtp_literal_expression
                            (literal
                              (integer_literal))))))))))))))))

================================================================================
parenthesized quantifier
================================================================================
predicate bitmap_add_ok(old_bitmap : UInt, idx : Int, new_bitmap : UInt) {
  valid_idx(idx) &&
  mem_value(new_bitmap, idx) &&
  (∀ i : Int,
    valid_idx(i) && i != idx →
      mem_value(new_bitmap, i) == mem_value(old_bitmap, i))
}
--------------------------------------------------------------------------------

(structure
  (mbtp_declaration
    (predicate_definition
      (lowercase_identifier)
      (mbtp_parameter_list
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier))))))
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier))))))
        (mbtp_parameter
          (lowercase_identifier)
          (mbtp_type
            (mbtp_non_function_type
              (mbtp_type_path
                (identifier
                  (uppercase_identifier)))))))
      (mbtp_predicate_body
        (mbtp_term
          (mbtp_implies_term
            (mbtp_or_term
              (mbtp_and_term
                (mbtp_and_term
                  (mbtp_and_term
                    (mbtp_not_term
                      (mbtp_term_atom
                        (mbtp_expression
                          (mbtp_apply_expression
                            (mbtp_atomic_expression
                              (mbtp_identifier_expression
                                (mbtp_value_path
                                  (identifier
                                    (lowercase_identifier)))))
                            (mbtp_expression
                              (mbtp_atomic_expression
                                (mbtp_identifier_expression
                                  (mbtp_value_path
                                    (identifier
                                      (lowercase_identifier)))))))))))
                  (mbtp_not_term
                    (mbtp_term_atom
                      (mbtp_expression
                        (mbtp_apply_expression
                          (mbtp_atomic_expression
                            (mbtp_identifier_expression
                              (mbtp_value_path
                                (identifier
                                  (lowercase_identifier)))))
                          (mbtp_expression
                            (mbtp_atomic_expression
                              (mbtp_identifier_expression
                                (mbtp_value_path
                                  (identifier
                                    (lowercase_identifier))))))
                          (mbtp_expression
                            (mbtp_atomic_expression
                              (mbtp_identifier_expression
                                (mbtp_value_path
                                  (identifier
                                    (lowercase_identifier)))))))))))
                (mbtp_not_term
                  (mbtp_term_atom
                    (mbtp_expression
                      (mbtp_parenthesized_expression
                        (mbtp_quantified_term
                          (lowercase_identifier)
                          (mbtp_type
                            (mbtp_non_function_type
                              (mbtp_type_path
                                (identifier
                                  (uppercase_identifier)))))
                          (mbtp_term
                            (mbtp_implies_term
                              (mbtp_or_term
                                (mbtp_and_term
                                  (mbtp_and_term
                                    (mbtp_not_term
                                      (mbtp_term_atom
                                        (mbtp_expression
                                          (mbtp_apply_expression
                                            (mbtp_atomic_expression
                                              (mbtp_identifier_expression
                                                (mbtp_value_path
                                                  (identifier
                                                    (lowercase_identifier)))))
                                            (mbtp_expression
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier)))))))))))
                                  (mbtp_not_term
                                    (mbtp_term_atom
                                      (mbtp_expression
                                        (mbtp_binary_expression
                                          (mbtp_atomic_expression
                                            (mbtp_identifier_expression
                                              (mbtp_value_path
                                                (identifier
                                                  (lowercase_identifier)))))
                                          (mbtp_atomic_expression
                                            (mbtp_identifier_expression
                                              (mbtp_value_path
                                                (identifier
                                                  (lowercase_identifier)))))))))))
                              (mbtp_implies_term
                                (mbtp_or_term
                                  (mbtp_and_term
                                    (mbtp_not_term
                                      (mbtp_term_atom
                                        (mbtp_expression
                                          (mbtp_binary_expression
                                            (mbtp_apply_expression
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier)))))
                                              (mbtp_expression
                                                (mbtp_atomic_expression
                                                  (mbtp_identifier_expression
                                                    (mbtp_value_path
                                                      (identifier
                                                        (lowercase_identifier))))))
                                              (mbtp_expression
                                                (mbtp_atomic_expression
                                                  (mbtp_identifier_expression
                                                    (mbtp_value_path
                                                      (identifier
                                                        (lowercase_identifier)))))))
                                            (mbtp_apply_expression
                                              (mbtp_atomic_expression
                                                (mbtp_identifier_expression
                                                  (mbtp_value_path
                                                    (identifier
                                                      (lowercase_identifier)))))
                                              (mbtp_expression
                                                (mbtp_atomic_expression
                                                  (mbtp_identifier_expression
                                                    (mbtp_value_path
                                                      (identifier
                                                        (lowercase_identifier))))))
                                              (mbtp_expression
                                                (mbtp_atomic_expression
                                                  (mbtp_identifier_expression
                                                    (mbtp_value_path
                                                      (identifier
                                                        (lowercase_identifier)))))))))))))))))))))))))))))

================================================================================
lemma proof chains
================================================================================
lemma singleton_count_one(
  bitmap : UInt,
  idx : Int,
) where {
  proof_require: singleton_bitmap_ok(bitmap, idx),
  proof_ensure: count_value(bitmap, 0) == 1,
} {
  proof_assert count_value(bitmap, 0) == 1
  proof_assert count_value(bitmap, 0) ==
    raw_numof(fn (j : Int) { j == idx }, 0, 32)
  proof_assert raw_numof(fn (j : Int) { j == idx }, 0, 32) ==
    raw_numof(fn (j : Int) { j == idx }, 0, idx) +
    raw_numof(fn (j : Int) { j == idx }, idx, idx + 1) +
    raw_numof(fn (j : Int) { j == idx }, idx + 1, 32)
}
--------------------------------------------------------------------------------
